tests/snapshots/parser__errors__eof_after_terminator.snap
---
source: tests/parser.rs
expression: "parse(\";\")"
---
Err(
    ParseError {
        message: "expected expression, found SemiColon",
        span: Span {
            start: 0,
            end: 1,
        },
    },
)
