tests/snapshots/parser__errors__leading_comma.snap
---
source: tests/parser.rs
expression: "parse(\"print(,)\")"
---
Err(
    ParseError {
        message: "expected argument, found Comma",
        span: Span {
            start: 6,
            end: 7,
        },
    },
)
