tests/snapshots/parser__errors__missing_comma.snap
---
source: tests/parser.rs
expression: "parse(\"print(x y)\")"
---
Err(
    ParseError {
        message: "expected `,` or `)`, found Identifier(\"y\")",
        span: Span {
            start: 8,
            end: 9,
        },
    },
)
