tests/snapshots/parser__errors__trailing_comma_eof.snap
---
source: tests/parser.rs
expression: "parse(\"print(x,\")"
---
Err(
    ParseError {
        message: "unexpected end of input",
        span: Span {
            start: 8,
            end: 8,
        },
    },
)
