tests/snapshots/parser__errors__unclosed_paren_eof.snap
---
source: tests/parser.rs
expression: "parse(\"print(\")"
---
Err(
    ParseError {
        message: "unexpected end of input",
        span: Span {
            start: 6,
            end: 6,
        },
    },
)
