tests/snapshots/parser__errors__unexpected_start.snap
---
source: tests/parser.rs
expression: "parse(\",\")"
---
Err(
    ParseError {
        message: "expected expression, found Comma",
        span: Span {
            start: 0,
            end: 1,
        },
    },
)
